test/expected/explain_a5fd_i.out
explain int f[5](double)
             ^
14: error: array of function is illegal; did you mean array of pointer to function?
